discussion/kv_engine/155178/155178_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-29928: Refactor DefragmenterTask::run

Move the code which is executed when 'enabled' to its own function.

Change-Id: I7c651d8ce82446c62858b9dcde7d4b9aa5aa4c9d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-11 11:16:02.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 12:03:51.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36748/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\third_party\gsl-lite\include\gsl/gsl-lite.hpp(2314): error C2100: illegal indirection ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36748/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9781/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9781/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9781/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11356/ : FAILURE

Compile error at [2021-06-11T11:45:02.839Z] ../third_party/gsl-lite/include/gsl/gsl-lite.hpp:2314:55:
error: ?const void*? is not a pointer-to-object type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11356/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11505/ : FAILURE

Compile error at [2021-06-11T11:47:08.976Z] ../third_party/gsl-lite/include/gsl/gsl-lite.hpp:2314:55:
error: ?const void*? is not a pointer-to-object type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11505/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8376/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/300/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31411/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11782/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19367/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10432/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
